# bs_lib

./: .gitignore  CMakeLists.txt  README.md
src/: Anim.cpp  Anim.h  AnimStack.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  BsLogger.cpp  BsLogger.h  CMakeCache.txt  CircleHitbox.h  ColorAnim.cpp  ColorAnim.h  DebugInfoUi.cpp  DebugInfoUi.h  GraphWidget.cpp  GraphWidget.h  Group.cpp  Group.h  JsonManager.cpp  Log.h  Makefile  MemoryUsageGraph.cpp  MoveAnim.cpp  MoveAnim.h  OsStates.cpp  OsStates.h  PolygonHitbox.cpp  PolygonHitbox.h  Raleway.h  RectHitbox.cpp  RectHitbox.h  RotateAnim.cpp  RotateAnim.h  ScaleAnim.cpp  ScaleAnim.h  Signal.h  SizeAnim.cpp  SizeAnim.h  TickRateController.cpp  (+9 more)
src/anim/: Animation.cpp  Animation.h  MoveAnim.cpp  RotateAnim.cpp  ScaleAnim.cpp  SizeAnim.cpp  SizeAnim.h  ViewAnim.cpp  ViewAnim.h
src/core/: Animator.cpp  Animator.h  JsonManager.h  Log.h  Signal.h  TickRateController.h  UsesTransformable.cpp  UsesTransformable.h  Utils.hpp  bs.cpp  bs.h  main.cpp
src/hitbox/: CircleHitbox.cpp  Hitbox.h
src/scene/: DebugScene.cpp  DebugScene.h  DropDown.cpp  DropDown.h  FrameTimeGraph.cpp  FrameTimeGraph.h  GraphWidget.cpp  GraphWidget.h  Group.cpp  Group.h  Item.cpp  Item.h  MemoryUsageGraph.cpp  MemoryUsageGraph.h  ProgressBar.cpp  ProgressBar.h  PushButton.cpp  PushButton.h  RoundedRectangleShape.hpp  Scene.cpp  Scene.h  ShapeMaskRenderer.cpp  ShapeMaskRenderer.h  Widget.h
tools/: bin2c.c
